cambios de textos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <article>
-        This is my first HTML via Ubuntu code .
+        This is my first HTML via Ubuntu code. I made some changes to test commiting changes.
     </article>    
 </body>
 </html>
